--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "atomize": "^1.0.28",
     "bootstrap": "^5.0.1",
     "bootswatch": "^5.0.1",
     "jwt-decode": "^3.1.2",
@@ -20,6 +21,8 @@
     "react-simple-flex-grid": "^1.3.21",
     "shopify-buy": "^2.12.0",
     "simple-flexbox": "^2.3.2",
+    "styletron-engine-atomic": "^1.4.8",
+    "styletron-react": "^6.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
