--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^3.4.4",
     "react-simple-flex-grid": "^1.3.21",
     "shopify-buy": "^2.12.0",
     "simple-flexbox": "^2.3.2",
